--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "node-lhaley.com",
   "version": "1.0.0",
   "description": "Plain node version of lhaley.com",
+  "scripts": {
+    "start": "nodejs app.js",
+    "test": "./node_modules/.bin/mocha --reporter spec"
+  },
   "main": "app.js",
   "dependencies": {
+    "chai": "^4.0.2",
     "ejs": "^1.0.0",
-    "express": "^4.6.1"
+    "express": "^4.6.1",
+    "mocha": "^3.4.2",
+    "request": "^2.81.0"
   },
   "keywords": [
     "api"
