--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
+sudo: required
 language: node_js
+services:
+   - docker
 node_js:
    - "iojs"
    - "node"
+before_install:
+   - docker build -t lhaley2011/lhaley.com .
+   - docker run -d -p 127.0.0.1:80:8080 lhaley2011/lhaley.com /bin/sh -c "cd /usr/src/app; npm start;"
+   - docker ps -a
+
