--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
    - "iojs"
    - "node"
 before_install:
+   - docker --version
    - docker build -t lhaley2011/lhaley.com .
    - docker run -d -p 127.0.0.1:80:8080 lhaley2011/lhaley.com /bin/sh -c "cd /usr/src/app; npm start;"
    - docker ps -a
