docker login - added registry url back

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
    - "iojs"
    - "node"
 before_install:
-   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" 
+   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" $DOCKER_REGISTRY
    - docker info
    - docker build -t lhaley2011/lhaley.com .
    - docker run -d -p 127.0.0.1:80:8080 lhaley2011/lhaley.com /bin/sh -c "cd /usr/src/app; npm start;"
