changed repo name to env variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
    - "node"
 before_install:
    - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" $DOCKER_REGISTRY
-   - docker build -t $DOCKER_USERNAME/lhaley.com .
-   - docker run -d -p 127.0.0.1:80:8080 $DOCKER_USERNAME/lhaley.com /bin/sh -c "cd /usr/src/app; npm start;"
+   - docker build -t $DOCKER_USERNAME/$DOCKER_REPO .
+   - docker run -d -p 127.0.0.1:80:8080 $DOCKER_USERNAME/$DOCKER_REPO /bin/sh -c "cd /usr/src/app; npm start;"
    - docker ps -a
 
