--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
    - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" $DOCKER_REGISTRY
    - docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY .
    - docker run -d -p 127.0.0.1:80:8080 $DOCKER_USERNAME/$DOCKER_REPOSITORY /bin/sh -c "cd /usr/src/app; npm start;"
-   - docker ps -a
-
+   - sleep 10 # wait 10 seconds before testing
+   - grep -P "true" <<< $(docker inspect -f {{.State.Running}} lhaley-test)
