--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
    - docker ps -a;
 after_success:
    - if [ "$TRAVIS_BRANCH" == "master" ]; then
-     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" $DOCKER_REGISTRY;
-     #docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY;
-     fi
+   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" $DOCKER_REGISTRY;
+   -  #docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY;
+   - fi
