--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-lhaley.com",
-  "version": "1.0.0",
+  "name": "lhaley.com",
+  "version": "1.2.0",
   "description": "Plain node version of lhaley.com",
   "scripts": {
-    "start": "nodejs app.js",
+    "start": "node app.js",
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "main": "app.js",
@@ -15,7 +15,7 @@
     "request": "^2.81.0"
   },
   "keywords": [
-    "api"
+    "frontend"
   ],
   "author": "Lucas Haley",
   "repository": {
